# RationAISummerSchool

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: default.yaml  train.yaml
configs/data/datasets/patch_camelyon/: test.yaml  train.yaml  val.yaml
configs/data/transforms/: test.yaml  train.yaml
configs/logger/: mlflow.yaml
configs/metadata/: default.yaml
configs/model/backbone/: resnet.yaml  vgg.yaml
configs/reporter/: ikem.yaml
configs/trainer/: default.yaml
configs/trainer/logger/: mlflow.yaml
patch_camelyon/: main.py  patch_camelyon_model.py  typing.py
patch_camelyon/data/: __init__.py  data_module.py
patch_camelyon/data/datasets/: __init__.py  pcam.py
patch_camelyon/modeling/: README.md  __init__.py  decoder_head.py
patch_camelyon/modeling/backbone/: __init__.py  resnet.py  vgg.py
project_name/: main.py  project_name_model.py  typing.py
project_name/data/: README.md  __init__.py  data_module.py
src/: train.py
src/data/: mnist.py
