[project]
name = ""
version = "0.1.0"
authors = []
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "rationai-mlkit @ git+ssh://git@gitlab.ics.muni.cz/rationai/digital-pathology/libraries/mlkit.git",
]

[tool.pdm.dev-dependencies]
dev = ["mypy", "pre-commit", "ruff"]

[tool.pdm.scripts]
train = "python -m src.train"
l = { composite = ["lint", "format", "mypy"] }
lint = "ruff check"
format = "ruff format"
mypy = "mypy ."
post_install = { composite = [
    "pre-commit install",
    "pre-commit install --hook-type commit-msg",
] }

[tool.pdm]
distribution = false
