[project]
name = "patch-camelyon"
version = "0.1.0"
authors = []
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "torch>=2.4.0",
    "lightning>=2.4.0",
    "rationai-mlkit @ git+https://gitlab.ics.muni.cz/rationai/digital-pathology/libraries/mlkit.git",
    "albumentations>=1.4.14",
    "torchvision>=0.19.1",
]

[tool.pdm.dev-dependencies]
dev = ["mypy", "pre-commit", "ruff"]

[tool.pdm.scripts]
train = "python -m patch_camelyon.main mode=fit"
validate = "python -m patch_camelyon.main mode=validate"
test = "python -m patch_camelyon.main mode=test"
predict = "python -m patch_camelyon.main mode=predict"
l = { composite = ["lint", "format", "mypy"] }
lint = "ruff check --fix"
format = "ruff format"
mypy = "mypy ."
post_install = { composite = [
    "pre-commit autoupdate",
    "pre-commit install",
    "pre-commit install --hook-type commit-msg",
] }

[tool.pdm]
distribution = false
